extract token helper